# project-parallax

./: .gitignore  CMakeLists.txt  README.md  SecondPersonGamePlan.md
include/: camera_view.h  config.h  config.h.in  dist_sensors_view.h  i_robot_view.h  map.h  player.h
resources/maps/: milestone1.ppmap
src/: camera_view.cpp  dist_sensors_view.cpp  main.cpp  map.cpp  player.cpp
